objects/report_sender__Report_Sender_Columns_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>report_sender__Columns_Position__c</fullName>
        <label>Columns Position</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>report_sender__Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>report_sender__Is_BCC__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is BCC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>report_sender__Is_CC__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is CC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>report_sender__Is_Description__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Description</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>report_sender__Is_File_Names__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is File Names</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>report_sender__Is_File_Type__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is File Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>report_sender__Is_Folder__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Folder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>report_sender__Is_From__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is From</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>report_sender__Is_Job_Name__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Job Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>report_sender__Is_Last_Successful_Send__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Last Successful Send</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>report_sender__Is_Next_Execution_Date__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Next Execution Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>report_sender__Is_Subject__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Subject</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>report_sender__Is_To__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is To</label>
        <type>Checkbox</type>
    </fields>
    <label>Report Sender Columns Setting</label>
    <pluralLabel>Report Sender Columns Settings</pluralLabel>
</CustomObject>